<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="pt.ubi.di.pdm.pediduchos.PedidoCriar">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editarpedido_criarpedido"
        android:background="@color/colorPrimary"

        android:id="@+id/saveButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="20px"
        android:textColor="#ffffff" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:rowCount="5"
        android:columnCount="2"
        android:useDefaultMargins="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/editarpedido_pedidos"
            android:id="@+id/textView"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="top" />

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editDropdown"
            android:layout_row="3"
            android:layout_column="1"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/editarpedido_hint"
            android:id="@+id/textView17"
            android:layout_row="4"
            android:layout_column="0" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editProdutos"
            android:layout_row="4"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/editarpedido_mesa"
            android:id="@+id/textView2"
            android:layout_row="0"
            android:layout_column="0" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editMesa"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/editarpedido_nomecliente"
            android:id="@+id/textView3"
            android:layout_row="1"
            android:layout_column="0" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editCliente"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="right" />

    </GridLayout>

</RelativeLayout>
