<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="pt.ubi.di.pdm.pediduchos.PedidoDetalhes">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/pedidodetalhes_mesa"
                android:id="@+id/textView13"
                android:layout_marginRight="15px"
                android:layout_marginBottom="20px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/detalhesMesa" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pedidodetalhes_pedido"
                android:id="@+id/textView10"
                android:layout_below="@+id/textView9"
                android:layout_alignParentStart="true"
                android:layout_marginRight="15px"
                android:layout_marginBottom="20px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/detalhesPedido"
                android:layout_below="@+id/textView9"
                android:layout_toEndOf="@+id/textView10" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pedidodetalhes_cliente"
                android:id="@+id/textView11"
                android:layout_below="@+id/textView10"
                android:layout_alignParentStart="true"
                android:layout_marginRight="15px"
                android:layout_marginBottom="20px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/detalhesCliente"
                android:layout_below="@+id/textView11"
                android:layout_toEndOf="@+id/textPedido" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pedidodetalhes_empregado"
                android:id="@+id/textView14"
                android:layout_below="@+id/textView10"
                android:layout_alignParentStart="true"
                android:layout_marginRight="15px"
                android:layout_marginBottom="20px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/detalhesEmpregado"
                android:layout_below="@+id/textView14"
                android:layout_toEndOf="@+id/textPedido" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pedidetalhes_fechado"
                android:id="@+id/textView15"
                android:layout_marginRight="15px"
                android:layout_marginBottom="20px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/detalhesFechado" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pedidodetalhes_data"
                android:id="@+id/textView12"
                android:layout_marginRight="15px"
                android:layout_marginBottom="20px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Medium Text"
                android:id="@+id/detalhesData" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/pedidodetalhes_conta"
                android:id="@+id/textView16"
                android:layout_marginRight="15px"
                android:layout_marginBottom="20px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Medium Text"
                android:id="@+id/detalhesValor" />
        </LinearLayout>

        <Space
            android:layout_width="fill_parent"
            android:layout_height="50px" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pedidodetalhes_buttonfechar"
                android:id="@+id/dbuttonFechar"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:textColor="#ffffff" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pedidodetalhes_buttoneditar"
                android:id="@+id/dbuttonEditar"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:textColor="#ffffff" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
